# assignment-eterna

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  models.rs
db/: Cargo.toml
db-service/: Cargo.toml  Dockerfile  README.md
db-service/migrations/initial/: up.sql
db-service/src/: database.rs  main.rs  models.rs  redis_monitor.rs  schema.rs
mock_dex_router/: Cargo.toml  Dockerfile  README.md
mock_dex_router/src/: dex_router.rs  main.rs  models.rs  parser.rs  processor.rs  redis_handler.rs  status_manager.rs  stream_parser.rs  types.rs
tests/: README.md  acknowledgment-tests.js  demo.js  integration-tests.js  package-lock.json  package.json  test-runner.js
