[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-stream = "0.1"
serde-redis = "0.14.0"
dotenvy = "0.15"
