[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
tokio-postgres = "0.7"
dotenvy = "0.15"